--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-  <h1>hi world!</h1>
-  <p>let's find some bikes.</p>
+    <div id="location-form-container">
+      <form id="location-form" method="post" action="/">
+        <input id="location-input" type="text" name="location" placeholder="Please input a location.">
+        <input id="location-button" type="button" value="submit">
+      </form>
+    </div>
+
+    <div id="map"></div>
+
   <script src="./js/main.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC87bAzg2HQb3-tE6uUeib_10VMmMdU1kY">
+    </script>
   </body>
 </html>
