add rendered list of closest stations plus highlighting

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <div id="map"></div>
 
+    <div id="stations-container">
+      <ul id="stations-list">  
+      </ul>
+    </div>
+
   <script src="./data/indego.json"></script>
   <script src="./js/main.js"></script>
   <script async defer
