undo heroku modifications, add favicon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </footer>
 
   <script src="./js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC87bAzg2HQb3-tE6uUeib_10VMmMdU1kY&libraries=geometry">
   </script>
 </body>
 
